# neural_decoding

./: LICENSE  README.md  TrainingUtils.py  pyproject.toml  requirements.txt  testing.ipynb
decoders/: base_decoder.py  linear_decoders.py
src/neural_decoding/: __init__.py
src/neural_decoding/decoders/: BASE_NN_decoder.py  BASE_RNN_decoder.py  __init__.py  base_nonlinear_decoder.py  linear_decoders.py  nonlinear_decoders.py
tests.py/: test.py  testing.ipynb
