[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural_decoding"
version = "0.0.1"
authors = [
    {name="Hisham Temmar", email="htemmar@umich.edu"},
    {name="Nicholas Mellon", email="nbmellon@umich.edu"},
    {name="Rio Parsons", email="riopar@umich.edu"}
]
description = "A collection and framework for decoding neural data into behavior"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chesteklab/neural_decoding"
Issues = "https://github.com/chesteklab/neural_decoding/issues"
